--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ h1 {
     color: darkblue;
 }
 
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -21,6 +21,32 @@ img {
     box-shadow: 0 0 30px gray;
 }
 
+
 p {
-    padding: 10px;
+    padding: 0px;
+}
+
+main {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+aside {
+    width: 90%;
+    margin: 20px auto;
+    border: 2px solid #333;
+    padding: 15px;
+    background-color: #f0f0f0;
+    color: #000;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 40px;
+    border-top: 1px solid #ccc;
+    text-align: center;
 }
